Fix drizzle schema import paths for Turbopack/Next.js build
- Add drizzle directory to tsconfig.json includes
- Add @drizzle/* path alias
- Update all drizzle/schema imports to use absolute paths from baseUrl
- Fixes "Module not found: Can't resolve '../drizzle/schema'" error in Vercel builds

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "shared/**/*",
     "server/**/*",
     "app/**/*",
+    "drizzle/**/*",
     "next-env.d.ts",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
@@ -46,6 +47,9 @@
       ],
       "@server/*": [
         "./server/*"
+      ],
+      "@drizzle/*": [
+        "./drizzle/*"
       ]
     },
     "target": "ES2017",
