Fix .vercelignore to include drizzle/schema.ts needed for build
- Remove blanket drizzle/ exclusion
- Only exclude drizzle/migrations/, drizzle/meta/, and drizzle/*.sql
- Keep drizzle/schema.ts and drizzle/relations.ts which are required at build time
- Fixes module resolution error: Can't resolve '../drizzle/schema'

--- a/.vercelignore
+++ b/.vercelignore
@@ -38,8 +38,10 @@ vitest.config.ts
 # *.md
 # docs/
 
-# Database migrations (already run)
-drizzle/
+# Database migrations (already run) - but keep schema.ts and relations.ts which are needed for build
+drizzle/migrations/
+drizzle/meta/
+drizzle/*.sql
 
 # Build artifacts
 .next/
