--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "lucide-react": "^0.453.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
-    "next": "latest",
+    "next": "^16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^4.67.0",
     "react": "^19.1.1",
@@ -90,7 +90,7 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^16.0.3",
     "pnpm": "^10.15.1",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
