--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
@@ -95,6 +96,7 @@
     "@types/node": "^24.7.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "2.1.9",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
