--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "node_modules",
     "build",
     "dist",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.integration.test.ts",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ],
   "compilerOptions": {
     "incremental": true,
