Add explicit repository specification to CI workflows
- Specify repository and branch in checkout step
- Prevents CI from accidentally checking wrong repository
- Ensures CI always checks the correct codebase

--- a/.github/workflows/vercel-preview.yml
+++ b/.github/workflows/vercel-preview.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # Explicitly specify repository to prevent checking wrong repo
+          repository: JStoweYouKnow/ai_cooking_agent
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
