--- a/.github/workflows/vercel-production.yml
+++ b/.github/workflows/vercel-production.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # Explicitly specify repository and branch to prevent checking wrong repo
+          repository: JStoweYouKnow/ai_cooking_agent
+          ref: main
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
