--- a/.github/workflows/vercel-production.yml
+++ b/.github/workflows/vercel-production.yml
@@ -43,8 +43,12 @@ jobs:
       - name: Type check
         run: pnpm check
 
-      - name: Run tests
+      - name: Run unit tests
         run: pnpm test
+
+      # Skip e2e tests in CI for now (require dev server and browser setup)
+      # - name: Run e2e tests
+      #   run: pnpm test:e2e
 
       - name: Build
         run: pnpm build
