--- a/package.json
+++ b/package.json
@@ -79,11 +79,13 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "unzipper": "^0.12.3",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
@@ -100,6 +102,7 @@
     "@types/node": "^24.7.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/unzipper": "^0.10.11",
     "@vitest/coverage-v8": "2.1.9",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
