--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@trpc/server": "^11.6.0",
     "@types/pdfkit": "^0.17.3",
     "axios": "^1.12.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -73,6 +74,7 @@
     "next-themes": "^0.4.6",
     "openai": "^4.67.0",
     "pdfkit": "^0.17.2",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
@@ -100,6 +102,7 @@
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^24.7.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/unzipper": "^0.10.11",
