Add cooking time extraction from recipe steps
New functions in recipeParsing.ts:
- extractCookingTimeFromSteps() - handles JSONB steps array
- getEffectiveCookingTime() - tries all sources: cookingTime, cook_time_minutes, instructions, steps

Updated db.ts:
- Added enhanceRecipeWithCookingTime() helper
- getUserRecipes() and getRecipeById() now auto-compute cooking time
- Recipes without explicit cookingTime get it extracted from steps

Updated backfill script:
- Now checks both instructions AND steps for cooking times
- Shows source of extraction (instructions vs steps)
- Fixed dotenv loading order

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e:debug": "playwright test --debug",
     "db:push": "drizzle-kit push",
     "db:migrate": "node scripts/run-migrations.js",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate",
+    "backfill-cooking-times": "tsx scripts/backfill-cooking-times.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
