--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "backfill-cooking-times": "tsx scripts/backfill-cooking-times.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-iam": "^3.940.0",
     "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/client-sts": "^3.940.0",
     "@aws-sdk/s3-request-presigner": "^3.693.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -49,10 +51,12 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/stripe-js": "^8.5.3",
     "@tanstack/react-query": "^5.90.2",
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/cors": "^2.8.19",
     "@types/pdfkit": "^0.17.3",
     "axios": "^1.12.0",
     "cheerio": "^1.1.2",
@@ -60,10 +64,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
+    "expo": "^54.0.25",
     "express": "^4.21.2",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
@@ -85,6 +91,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
+    "stripe": "^20.0.0",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -93,6 +100,15 @@
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0",
+    "@esbuild-kit/core-utils": {
+      "esbuild": "^0.25.0"
+    },
+    "vite": {
+      "esbuild": "^0.25.0"
+    }
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
@@ -107,9 +123,10 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/unzipper": "^0.10.11",
-    "@vitest/coverage-v8": "2.1.9",
+    "@vitest/coverage-v8": "^4.0.14",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.8.32",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "eslint-config-next": "^16.0.3",
@@ -120,7 +137,7 @@
     "tsx": "^4.19.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.9.3",
-    "vitest": "^2.1.4"
+    "vitest": "^4.0.14"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "pnpm": {
@@ -128,7 +145,10 @@
       "wouter@3.7.1": "patches/wouter@3.7.1.patch"
     },
     "overrides": {
-      "tailwindcss>nanoid": "3.3.7"
+      "tailwindcss>nanoid": "3.3.7",
+      "esbuild": "^0.25.0",
+      "@esbuild-kit/core-utils>esbuild": "^0.25.0",
+      "vite>esbuild": "^0.25.0"
     },
     "ignoredBuiltDependencies": [
       "lightningcss"
