--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "lucide-react": "^0.453.0",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
-    "next": "^16.0.0",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "openai": "^4.67.0",
     "pdfkit": "^0.17.2",
