Add dual S3 bucket support (ingredients + recipe images)
- S3_BUCKET_INGREDIENTS and S3_BUCKET_RECIPE_IMAGES env vars
- uploadImageToS3 accepts bucketType param; recipe images use recipes bucket
- S3_BUCKET remains fallback for both
- Add test-s3-upload.mjs script

--- a/.env.production.example
+++ b/.env.production.example
@@ -31,11 +31,16 @@ LLM_BASE_URL=https://generativelanguage.googleapis.com/v1beta
 # ============================================================================
 # STORAGE (AWS S3 or Compatible)
 # ============================================================================
-# Optional: For image uploads
+# For image uploads - use separate buckets for ingredients vs recipe images
 AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=ai-cooking-agent-images
+# Ingredient photos (recognize from image, pantry uploads)
+S3_BUCKET_INGREDIENTS=sous-ingredients
+# AI-generated recipe images
+S3_BUCKET_RECIPE_IMAGES=sous-recipe-images
+# Fallback: if above are unset, S3_BUCKET is used for both
+# S3_BUCKET=your-single-bucket
 
 # Alternative: Use Vercel Blob Storage
 # BLOB_READ_WRITE_TOKEN=vercel_blob_token
